# quant-cv

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: mkdocs-deploy.yml
about/: index.html
docs/: CNAME
notebooks/: dev.ipynb
src/alpha/: __init__.py  core.py
